kagoiri-musume/kagoiri-musume.css
/* style sheet for kagoiri-musume */
/* $Id: kagoiri-musume.css,v 1.47 2006/02/15 16:53:51 shibata Exp $ */

/*
 * Common stuff
 */

body {
/*     margin: 0; */
    padding: 30px 0 0 0;
/*     color: #000; */
/*     background: #fff; */
/*     font-size: 1em; */
/*     padding: 0pt; */
    margin: 0pt;
    background-color: #f7f7f7;
}

h1, h2, h3, h4, h5, h6 {
    text-align: left;
    /* color: #29661a; */
    color: darkblue;
    background: transparent;
}
h1 { font-size: 150% }
h2 { font-size: 130% }
h3 { font-size: 120% }
h4 { font-size: 110% }
h5 { font-size: 100% }
h6 { font-size: 100%; font-style: italic }

hr {
    padding: 0pt; margin: 0pt;
    border-width: 1px 0px 0px 0px;
    border-style: solid;
    border-color: #7b96ac;
}

pre {
    background-color: #fff5ee; /* seashell */
    border: 1px solid #ffdab9;
    padding-left: 10px;
    margin-left:2em;
    width:80%;
    overflow: auto;
}

input, textarea
{
    background-color: white;
    color: inherit;
    border: 1px solid #7b96ac;
}

input:focus, textarea:focus
{
    border: 1px solid darkred;
}


p.warning {
  color: #ff0000;
}

span.warning {
  font-size: 70%;
  color: #ff0000;
}

pre.warning {
  color: #ff0000;
}


table.user-form th {
  text-align: right;
  padding-right: 5pt;
}


/*
 * Bottom pane
 */
div#bottom-pane
{
    text-align: center;
    font-size: 70%;
    color:white;
    background-color: #7b96ac;
    border-width: 1px;
    border-style: solid;
    border-color: black;
}

div#bottom-pane p {
    margin:5px 0px;
}


/*
 * Table listing
 */

table.listing a {
    text-decoration:none;
}

table.listing {
 clear: both;
 border-bottom: 1px solid #d7d7d7;
 border-collapse: collapse;
 border-spacing: 0;
 margin-top: 1em;
 width: 100%;
}
table.listing th { text-align: left; padding: 0 1em .1em 0; font-size: 12px }
table.listing thead { background: #f7f7f0 }
table.listing thead th {
 border: 1px solid #d7d7d7;
 border-bottom-color: #999;
 font-size: 11px;
 font-weight: bold;
 padding: 2px .5em;
 vertical-align: bottom;
}
table.listing thead th :link:hover, table.listing thead th :visited:hover {
 background-color: transparent;
}
table.listing thead th a { border: none; padding-right: 12px }
table.listing th.asc a, table.listing th.desc a { font-weight: bold }
table.listing th.asc a, table.listing th.desc a {
 background-position: 100% 50%;
 background-repeat: no-repeat;
}

table.listing tbody td, table.listing tbody th {
 border: 1px dotted #ddd;
 padding: .1em .5em;
 vertical-align: top;
}
table.listing tbody td a:hover, table.listing tbody th a:hover {
 background-color: transparent;
}
table.listing tbody tr { border-top: 1px solid #ddd }
table.listing tbody tr.even { background-color: #fcfcfc }
table.listing tbody tr.odd { background-color: #f7f7f7 }

/*
 * Status
 */

.status-completed {
    background-color:rgb(231,231,231);
}

.status-open {
    background-color:rgb(255, 225, 225);
}

.timeover {
    color: red;
    font-weight: bold;
}

.timeover a{
    color: red!important;
    font-weight: bold;
}

h1.timeover,h2.timeover,h3.timeover,h4.timeover,h5.timeover,h6.timeover {
    color: red!important;
    font-weight: bold;
}

div#header {
    height: 6em;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 600;
    width:100%;
    padding-top:5px;
    height:30px;
    background-color: #7b96ac;
    border-width: 1px;
    border-style: solid;
    border-color: black;
}

@media screen
{
    body>div#header, body>div#loading, body>div#body>div#navigation
    {
        position: fixed;
    }
}

#body {
    padding:20px 10px 0px 10px;
}

#header h1 {
    margin-top:10px;
    padding:10px 20px;
}

div#navigation {
    position:absolute;
    padding:0px;
    top:36px;
    left:0px;
    width:100%;
    background-color: #e8e8e8;
    border: 1px solid #7b96ac;
    padding-left: 10px;
    z-index: 600;
}

div#navigation a {
    text-decoration: none;
    color:darkblue;
}

div#navigation  {
    color:red;
}

#navigation .current {
    font-weight:bold;
}

.table-filter {
    margin: 0 auto;
}

.title {
    display:inline;
    color:white;
}

.title a {
    color:white;
    text-decoration:none;
}

.searchbox {
    display:inline;
    position:absolute;
    top:5px;
    right:10px;
}

.clickable
{
    background-color:white;
    border: 1px solid #7b96ac;
    padding:1px 2px 1px 2px;
    margin-left:3px;
    cursor: pointer;
}

a.clickable
{
    text-decoration:none;
    margin-left:3px;
    padding:1px 2px 1px 2px;
    border:1px solid black;
    color: black;
    background-color:#e8e8e8;
}

a.clickable:hover
{
    /* padding:0px 1px; */
    /* border: 1px solid darkred !important; */
    background-color:white;
}

.menu {
    padding-top:10px;
    padding-left:0px;
}

.menu li{
    display:inline;
}

.menu li a {
    text-decoration:none;
    margin-left:3px;
    padding:1px 2px 1px 2px;
    border:1px solid black;
    color: black;
    background-color:#e8e8e8;
}

#search-box {
    position:absolute;
    right:10px;
}

#musume_list thead {
    cursor: pointer;
    background-color:white;
}

#bookmark-button {
    position:absolute;
    right:10px;
}

/*
 * Table of Calendar
 */
table.task {
    border-collapse: collapse;
    table-layout: fixed;
    width: 100%;
    height: 78%;
    margin-bottom: 5px;
    border:1px dotted gray;
}

table.task tr th {
  height: 1em;
}

table.task tr td {
    border:1px dotted lightgray;
    height:14%;
    vertical-align:top;
}

table.task tr td:hover {
    background-color:#e5e5e5;
}

table.task tr td span {
  text-align:left;
  display:block!important;
}

table.task tr td.today{
    background-color: pink;
}

table.task tr td.today span, table.task tr td.today a {
    background-color:transparent;
}

table.task tr td.today:hover {
    background-color: #ffb6c1
}


table.task tr td div a {
  text-align: left;
}

table.calendar a {
    display:block;
    text-decoration:none;
    text-align:center;
    color:black;
    padding:3px;
    }

table.calendar a:hover {
    background-color: white !important;
}

table.calendar {
    border-collapse: collapse;
    border:1px dotted gray;
}

table caption {
    font-weight:bold;
}

table.calendar tr th
{
    text-align: center;
    background-color:lightgray;
    border-bottom: 1px dotted gray;
}

table.calendar tr td{
    text-align: right;
    padding:0px;
    /* border:1px dotted lightgray; */
}

tr.limit-fromto {
    height: 1em;
}

td.other-month a {
  color: gray !important;

}

td.other-month {
    color: gray;
    background-color:white;

}


td.workday a,td.workday span {
    /* background-color: white; */
}

td.saturday a ,td.saturday span, th.saturday {
  color:blue;
}

td.sunday a, td.sunday span, th.sunday {
  color: red;
}

td.compensate a, td.compensate span {
  color: red;
}

td.holy a, td.holy span {
    color: red;
}

td.holiday a, td.holiday span {
    color: red;
}

td.today a, td.today span {
    font-weight: bold;
    background-color:lightgray;
}

td.today.limit a {
    background-color: pink;
    border: 1px solid lightgray;
}

td.limit a {
  font-weight: bold;
  background-color: pink;
}


td.limit.target a {
  font-weight: bold;
  background-color: pink;
}

td.target a {
  font-weight: bold;
  background-color: yellow;
}

td#limit-calendar {
 vertical-align: top;
}

.memo {
    position:absolute;
    /* opacity: .90; */
    margin:0px;
    border: 1px solid black;
    background-color: #f2f2f2;
}

.help {
    position:absolute;
    opacity: .85;
    margin:0px;
    border: 1px solid black;
    background-color: #e8f8e8;
    cursor:help;
}

div.miniwindow {
    /* width:200px; */
    /* max-width: 400px; */
}

div.minititle {
    padding:2px;
    background-color:#7b96ac;
    color:white;
    text-align:center;
    font-weight:bold;
    border-bottom:1px solid black;
    padding:0 1em;
    position:relative;
}

div.minititle a {
    text-decoration:none;
    position:absolute;
    right:3px;
    top: 1px;
    color: black;
}

div.memo ul {
    display:block;
    padding:0px 10px;
}


div.memo li {
    /* padding:10px 0px; */
    display:block;
    border-bottom:1px solid lightgray;
}

div.memo li a {
    text-decoration:none;
    display:block;
}

div.memo a:hover {
    background-color: #a6b7d4;
}

div.miniwindow  ul.musumes {
    border: 1px dotted #aacccc;
    margin: 0px 10px;
    max-height: 300px !important;
    overflow: auto;
}

div#loading {
    position:absolute;
    z-index:1000;
    top:36px;
    right:0px;
    padding:0px 3px;
    border: 1px solid #7b96ac;
    color:white;
    /* font-weight:bold; */
    /* background-color: red; */
    background-color: #ff6347;
    /* background-color: darkblue; */
}

div#musume-links {
    display:inline;
}

div#musume-backlinks {
    display:inline;
}

table#links-table {
    border-bottom: 1px solid #d7d7d7;
    border-collapse: collapse;
    border-spacing: 0;
    margin-top: 1em;
}

table#links-table th {
 border: 1px solid #d7d7d7;
 border-bottom-color: #999;
 font-weight: bold;
 padding: 2px .5em;
 vertical-align: bottom;
}

table#links-table td {
 border: 1px dotted #ddd;
 padding: .1em .5em;
 vertical-align: top;
}

